# nanobind-spdlog-dbg

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pip.yml
src/: CMakeLists.txt  lib.cpp
src/nanobind_spdlog_dbg/: __init__.py
test/: test_logging.py
