# Copyright (C) 2024 Roberto Rossini <roberros@uio.no>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = [
  "scikit-build-core>=0.10",
  "typing_extensions",
]

build-backend = "scikit_build_core.build"

[project]
name = "nanobind_spdlog_dbg"
dynamic = ["version"]
authors = [
  {name = "Roberto Rossini", email = "roberros@uio.no"}
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License"
]

optional-dependencies.test = [
  "pytest>=8.0"
]

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/_version.py"]
wheel.expand-macos-universal-tags = true
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
BUILD_SHARED_LIBS = "OFF"

[tool.setuptools_scm]
write_to = "src/_version.py"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore:(ast.Str|Attribute s|ast.NameConstant|ast.Num) is deprecated:DeprecationWarning:_pytest",
  "ignore:datetime\\.datetime\\.utcfromtimestamp\\(\\)*:DeprecationWarning",  # https://github.com/pytest-dev/pytest/issues/11528
]

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.isort]
profile = "black"
